add java compiler args, fix jacoco argLine